syntax = "proto3";

import "google/protobuf/empty.proto";

service WalletManager {
  rpc GetAllBalances (google.protobuf.Empty) returns (GetAllBalancesResponse);
  rpc GetChainBalances (GetChainBalancesRequest) returns (WalletBalanceByAddress);
  rpc AcquireLock (AcquireLockRequest) returns (AcquireLockResponse);
  rpc ReleaseLock (ReleaseLockRequest) returns (google.protobuf.Empty);
}

message AcquireLockRequest {
  string chain_name = 1;
  optional string address = 2;
  optional uint64 lease_timeout = 3;
}
message AcquireLockResponse {
  string address = 1;
}

message ReleaseLockRequest {
  string chain_name = 1;
  string address = 2;
}

message GetChainBalancesRequest {
  string chain_name = 1;
}

message GetAllBalancesResponse {
  map<string, WalletBalanceByAddress> all_balances = 1;
}

message WalletBalanceByAddress {
  map<string, WalletBalanceByToken> balances = 2;
}

message WalletBalanceByToken {
  Balance native_balance = 1;
  map<string, Balance> token_balances = 2;
}

message Balance {
  string address = 1;
  bool is_native = 2;
  string symbol = 3;
  string raw_balance = 4;
  string formatted_balance = 5;
  optional string token_address = 6;
}
